# mercury

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
client/src/utilities/: requests.rs
integration-tests/src/: test.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  server.rs  util.rs
server/src/routes/: ecdsa.rs  state_entity.rs
shared/: Cargo.toml
shared/src/: ecies.rs  lib.rs  util.rs
utilities/: ecies.rs
