[package]
name = "shared"
version = "0.2.0"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>"
]
edition = "2018"

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
ecies = "0.1.4"
hex = "0.3.2"
libsecp256k1 = "0.3.5"
bitcoin = { version = "0.20", features = [ "use-serde" ] }
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = { version = "0.4.2", default-features = false,features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"